Update and rename HW2_Python(1).ipynb to HW2_Python.ipynb

--- a/HW2_Python.ipynb
+++ b/HW2_Python.ipynb
@@ -35,7 +35,7 @@
         "\n",
         "## Instructions\n",
         "\n",
-        "This assignment is due Monday, April 22 by 5pm. Please turn in a copy (either .pdf or .ipynb file) of this notebook as HW2 in Blackboard after you've completed it.\n",
+        "Please turn in a copy (as a pdf) of this notebook as HW2 in Canvas after you've completed it.\n",
         "\n",
         "Some questions refer you to the [ISL textbook](http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Seventh%20Printing.pdf). You may work with other students in the class to solve the problems but should write up your solutions separately.  Some textbook problem solutions are available on the internet.  You are welcome to look at these after attempting the problem yourself first, but please write up your solutions in your own words\n",
         "\n"
@@ -48,7 +48,7 @@
       },
       "source": [
         "## Problem 1: Bias-Variance Decomposition\n",
-        "In lecture on April 10th and 11th, we proved that the expected test MSE $E_{X, S, \\epsilon, Y}[Y-\\hat{Y}]^2$ could be decomposed into three parts, two variance terms and a squared bias term.  \n",
+        "In lecture we proved that the expected test MSE $E_{X, S, \\epsilon, Y}[Y-\\hat{Y}]^2$ could be decomposed into three parts, two variance terms and a squared bias term.  \n",
         "\n",
         "Rewrite the proof of this decomposition, any needed facts about expectations or variances is and when any assumptions are needed.  If you are uncomfortable with any of the expectations, then you may wish to write the expression in terms of integrals, i.e. $E_X[g(X)]=\\int g(x)f_X(x) dx$ where $f_X(x)$ is the probability density function of $X$.  \n",
         "\n",
